0030927: Modeling Algorithms - UnifySameDom looses the Closed flag for wires

Add setting the Closed flag for a new wire